--- a/src/app/register-form/register-form.component.scss
+++ b/src/app/register-form/register-form.component.scss
@@ -22,7 +22,29 @@
     flex-direction: column;
     justify-content:center;
     align-items: flex-start;
-    gap : 35px;
+    gap : 25px;
+    .input-nickname{
+      display: flex;
+      align-items: center;
+      
+    }
+
+    .validacao{
+      margin-left: 20px;
+    }
+
+    .msg-erro{
+      color: #ff0000;
+      font-size: 14px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      
+      img {
+        margin-right: 5px;
+      }
+    }
+
     input{
       padding: 5px 15px;
       border: none;
@@ -30,6 +52,7 @@
       outline: none;
       background: #F4F4F8;
     }
+    
     .submit{
       width: 100%;
       display: flex;
@@ -67,6 +90,9 @@
       }
       }
     }
+
+    
   }
 
+  
 }
